<?xml version="1.0" encoding="utf-8"?>
<!-- @author s195467 Stefan Luxhøj, 195456 Mads Hansen, Shania Hau, s195477-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4E2F2"
    android:id="@+id/event2All"
    tools:context=".Fragments.EventHandler.EventFragment">

    <TextView
        android:id="@+id/rigthNowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:fontFamily="@font/anton"
        android:text="Events"
        android:textColor="#1E1E1C"
        android:textSize="90px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="50dp"
        android:weightSum="10">


        <ImageButton
            android:layout_marginLeft="30dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:id="@+id/filterButton"
            android:layout_width="164dp"
            android:layout_height="38dp"
            android:background="#D4E2F2"
            android:src="@drawable/ic_back"
            android:tint="#002399"
            android:textAlignment="center"
            />


        <ImageButton
            android:id="@+id/rigthNowListButton"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_listview_unfilled"
            android:tint="#002399"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="63dp" />

        <ImageButton
            android:layout_weight="1"
            android:id="@+id/rigthNowGridButton"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_gridview_unfilled"
            android:tint="#002399"
            tools:layout_editor_absoluteX="235dp"
            tools:layout_editor_absoluteY="60dp"/>


        <ImageButton
            android:layout_weight="1"
            android:id="@+id/rigthNowLocationButton"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_map_unfilled"
            android:tint="#002399"
            tools:layout_editor_absoluteX="288dp"
            tools:layout_editor_absoluteY="60dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rigthNowrecyclerview"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>



</RelativeLayout>