<?xml version="1.0" encoding="utf-8"?>
<!-- @author s195467 Stefan Luxhøj -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E69999"
    android:id="@+id/fragment_home"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecyclerview"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_height="220dp"
            android:orientation="horizontal"
            >

        </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/eventTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeRecyclerview"
        android:fontFamily="@font/anton"
        android:layout_centerHorizontal="true"
        android:text="FIND EVENTS / VIBE CHECK"
        android:paddingHorizontal="50px"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:background="#D81818"
        />

    <TextView
        android:id="@+id/anbefaletTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventTxt"
        android:layout_marginLeft="40px"
        android:textColor="#000000"
        android:text="ANBEFALET TIL DIG"
        android:fontFamily="@font/anton"
        android:textSize="20sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventlistview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="0dp"
        android:paddingVertical="5dp"
        android:layout_below="@id/anbefaletTxt"
        android:layout_marginHorizontal="40px"
        />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>