<?xml version="1.0" encoding="utf-8"?>
<!-- @author s195467 Stefan Luxhøj -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    tools:context=".Fragments.MainActivity">

    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_navigation_toolbar"
        android:layout_above="@id/bottom_navigation">
        <fragment
            android:id="@+id/main_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            />

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:theme = "@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        app:itemIconTint="#FFFFFF"
        app:backgroundTint="#000000"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_navigation" />

    <include layout="@layout/top_navigation_toolbar"
        android:id="@+id/top_navigation_toolbar"
        app:menu="@menu/top_navigation">
    </include>






</RelativeLayout>
