<?xml version="1.0" encoding="utf-8"?>
<!-- @author s195485 Nikolai Kristensen-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDBA"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".Fragments.Login.LoginFragment">

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/tipborder"
        android:fontFamily="@font/anton"
        android:hint="ADGANGSKODE"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/anton"
        android:text="LOGIN"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/harprofilTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="HAR DU IKKE EN PROFIL?"
        android:textColor="#FF9800"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/tipborder"
        android:ems="10"
        android:fontFamily="@font/anton"
        android:hint="EMAIL"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/harprofilTV">

        <Button
            android:id="@+id/buttonOpretLogin"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginStart="13dp"
            android:layout_marginBottom="13dp"
            android:background="#F6A31A"
            android:fontFamily="@font/anton"
            android:text="OPRET DIG HER"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/buttonOpretConstraint"
            app:layout_constraintEnd_toEndOf="@+id/buttonOpretConstraint"
            app:layout_constraintStart_toStartOf="@+id/buttonOpretConstraint"
            app:layout_constraintTop_toTopOf="@+id/buttonOpretConstraint" />

        <TextView
            android:id="@+id/buttonOpretConstraint"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/tipborder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="252dp"
            android:layout_height="42dp"
            android:layout_marginStart="13dp"
            android:layout_marginBottom="13dp"
            android:background="#F6A31A"
            android:fontFamily="@font/anton"
            android:text="LOG IND"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/buttonConstraint"
            app:layout_constraintEnd_toEndOf="@+id/buttonConstraint"
            app:layout_constraintStart_toStartOf="@+id/buttonConstraint"
            app:layout_constraintTop_toTopOf="@+id/buttonConstraint" />

        <TextView
            android:id="@+id/buttonConstraint"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/tipborder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="220dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:src="@drawable/fbi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellerTV" />

    <TextView
        android:id="@+id/ellerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eller "
        android:textColor="#FF9800"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>

